# AgenticOmni

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: specify-rules.mdc
config/: settings.py
docs/: CHANGELOG.md  ENV_CONFIGURATION.md  FINAL_SUMMARY.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  MALWARE_SCANNING.md  PRODUCTION_DEPLOY.md  SKELETON_COMPLETE.md  implementation-summary.md
frontend/: README.md  README_ENV.md  package-lock.json
frontend/app/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: health-status.tsx
frontend/components/upload/: file-uploader.tsx  progress-tracker.tsx
scripts/: resumable_upload.py  run_tests.sh  setup_storage.sh  test_parsers.py  validate_env.sh
specs/001-app-skeleton-init/: data-model.md  quickstart.md  research.md  tasks.md
specs/002-doc-upload-parsing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-doc-upload-parsing/checklists/: requirements.md
specs/002-doc-upload-parsing/contracts/: document-api.yaml  processing-api.yaml  upload-api.yaml
src/api/: dependencies.py  main.py
src/api/middleware/: __init__.py  error_handler.py  logging.py  request_id.py
src/api/routes/: documents.py  health.py  metrics.py  processing.py
src/ingestion_parsing/models/: parsing_result.py  upload_request.py
src/ingestion_parsing/parsers/: base.py  docx_parser.py  parser_factory.py  pdf_parser.py  txt_parser.py
src/ingestion_parsing/services/: chunking_service.py  malware_scanner.py  parsing_service.py  upload_service.py
src/ingestion_parsing/storage/: file_storage.py  quota_manager.py
src/ingestion_parsing/tasks/: cleanup_tasks.py  document_tasks.py  worker.py
src/shared/: config.py  exceptions.py  logging_config.py  metrics.py  validators.py
src/storage_indexing/: database.py
src/storage_indexing/migrations/: env.py
src/storage_indexing/migrations/versions/: 05584d5088b8_initial_schema_with_renamed_metadata_.py  70d30bc2e5ae_add_performance_indexes.py  ea5d2dac7580_add_document_upload_and_parsing_fields.py
src/storage_indexing/models/: __init__.py  base.py  document.py  document_chunk.py  permission.py  processing_job.py  tenant.py  upload_session.py  user.py
src/storage_indexing/repositories/: chunk_repository.py  document_repository.py  job_repository.py  upload_session_repository.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_data.py
tests/fixtures/sample_documents/: sample.docx  sample.txt
tests/integration/: __init__.py  test_api.py  test_database.py  test_document_api.py  test_parsing_workflow.py  test_processing_api.py  test_upload_api.py
tests/unit/: __init__.py  test_chunking_service.py  test_config.py  test_malware_scanner.py  test_models.py  test_parsers.py  test_quota_manager.py  test_upload_service.py  test_validators.py
